[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.black]
include = '\.pyi?$'
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.poetry]
authors = ['Sitt Guruvanich <aekazitt+github@gmail.com>']
classifiers = [
  'Environment :: Web Environment',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3 :: Only',
  'Operating System :: OS Independent',
  'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
  'Topic :: Software Development :: Libraries :: Python Modules'
]
description = 'Cache extension for ASGI frameworks'
homepage = 'https://github.com/aekasitt/cachette'
keywords = [
  'starlette', 'fastapi', 'cache', 'redis', 'aioredis', 'dynamodb', 'aiobotocore',
  'asynchronous', 'memcached', 'aiomcache', 'mongodb', 'motor', 'pymongo'
]
license = 'MIT'
name = 'cachette'
packages = [
  {include='cachette'},
]
readme = 'README.md'
repository = 'https://github.com/aekasitt/cachette'
version = '0.1.7'

[tool.poetry.dependencies]
python = '^3.8'
pydantic = '^1.9.0'

[tool.poetry.group.dataframe]
optional = true

[tool.poetry.group.dataframe.dependencies]
pandas = '>=1.4.0'
pyarrow = '^7.0.0'

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = '^23.3.0'
mypy = '^1.3.0'
types-redis = '^4.1.21'

[tool.poetry.group.dynamodb]
optional = true

[tool.poetry.group.dynamodb.dependencies]
aiobotocore = '^2.2.0'

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
aiomcache = '^0.7.0'
redis = '^4.2.1'
uvicorn = '0.15.0'

[tool.poetry.group.memcached]
optional = true

[tool.poetry.group.memcached.dependencies]
aiomcache = '^0.7.0'

[tool.poetry.group.mongodb]
optional = true

[tool.poetry.group.mongodb.dependencies]
motor = '^2.5.1'

[tool.poetry.group.msgpack]
optional = true

[tool.poetry.group.msgpack.dependencies]
msgpack = '^1.0.3'

[tool.poetry.group.orjson]
optional = true

[tool.poetry.group.orjson.dependencies]
orjson = '^3.6.7'

[tool.poetry.group.redis]
optional = true

[tool.poetry.group.redis.dependencies]
redis = '^4.2.1'

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
fastapi = '^0'
httpx = '^0.24.1'
pytest = '^7.1.1'

[tool.poetry.group.thewholeshebang]
optional = true

[tool.poetry.group.thewholeshebang.dependencies]
aiobotocore = '^2.2.0'
aiomcache = '^0.7.0'
black = '^23.3.0'
httpx = '^0.24.1'
motor = '^2.5.1'
mypy = '^1.3.0'
orjson = '^3.6.7'
pandas = '>=1.4.0'
pyarrow = '^7.0.0'
pytest = '^7.1.1'
redis = '^4.2.1'
types-redis = '^4.1.21'
uvicorn = '0.15.0'

[tool.pytest.ini_options]
addopts = '--strict-markers --tb=short -s -rxXs'
testpaths = [ 'tests' ]
python_files = '*.py'
