[build-system]
build-backend = 'hatchling.build'
requires = [ 'hatchling' ]


[project]
authors = [
  { email = 'aekazitt+github@gmail.com', name = 'Sitt Guruvanich' },
]
classifiers = [
  'Environment :: Web Environment',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3 :: Only',
  'Operating System :: OS Independent',
  'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
  'Topic :: Software Development :: Libraries :: Python Modules'
]
dependencies = [
  'pydantic >=2.6.0',
]
description = 'Cache extension for ASGI frameworks'
homepage = 'https://github.com/aekasitt/cachette'
keywords = [
  'starlette', 'fastapi', 'cache', 'redis', 'aioredis', 'aiobotocore',
  'asynchronous', 'memcached', 'aiomcache', 'mongodb', 'motor'
]
license = 'MIT'
name = 'cachette'
readme = 'README.md'
repository = 'https://github.com/aekasitt/cachette'
requires-python = '>=3.9.19'
version = '0.1.9'


[project.optional-dependencies]
dataframe = [
  'pandas >=1.4.0',
  'pyarrow >=10.0.1',
]
examples = [
  'aiomcache >=0.7.0',
  'blacksheep >=2.0.6',
  'redis >=4.2.1',
  'types-redis >=4.1.21',
  'uvicorn >=0.15.0',
  'litestar >=2.3.2',
]
memcached = [
  'aiomcache >=0.7.0',
]
mongodb = [
  'motor >=3.4.0',
  'pymongo ==4.8.0',
]
msgpack = [
  'msgpack >=1.0.3',
]
orjson = [
  'orjson >=3.6.7',
]
redis = [
  'redis >=4.2.1',
  'types-redis >=4.1.21',
]
test = [
  'fastapi ==0.103.2; python_version == "3.9"',
  'fastapi >=0.104.0; python_version >= "3.10"',
  'httpx >=0.24.1',
  'pytest >=7.1.1',
  'starlette >=0',
]
thewholeshebang = [
  'aiomcache >=0.7.0',
  'blacksheep >=2.0.6',
  'fastapi ==0.103.2; python_version == "3.9"',
  'fastapi >=0.104.0; python_version >= "3.10"',
  'httpx >=0.24.1',
  'litestar >=2.3.2',
  'motor >=3.4.0',
  'msgpack >=1.0.3',
  'mypy >=1.8.0',
  'orjson >=3.6.7',
  'pandas >=1.4.0',
  'pyarrow >=10.0.1',
  'pymongo ==4.8.0',
  'pytest >=7.1.1',
  'redis >=4.2.1',
  'types-redis >=4.1.21',
  'uvicorn >=0.15.0',
]


[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = '--strict-markers --tb=short -s -rxXs'
filterwarnings = ['ignore::DeprecationWarning', 'ignore::FutureWarning']
python_files = '*.py'
testpaths = [ 'tests' ]


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py310'


[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401'] # Ignore unused imports


[tool.uv]
dev-dependencies = [
  'mypy >=1.8.0',
  'ruff >=0.3.5',
]
